tests/cve_arena/results/bd-1f35/hardened/mixed_detach_join/stderr.txt
warning: static variable `stdin` should have an upper case name
   --> crates/frankenlibc-abi/src/stdio_abi.rs:166:12
    |
166 | pub static stdin: usize = STDIN_SENTINEL;
    |            ^^^^^ help: convert the identifier to upper case: `STDIN`
    |
    = note: `#[warn(non_upper_case_globals)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: static variable `stdout` should have an upper case name
   --> crates/frankenlibc-abi/src/stdio_abi.rs:170:12
    |
170 | pub static stdout: usize = STDOUT_SENTINEL;
    |            ^^^^^^ help: convert the identifier to upper case: `STDOUT`

warning: static variable `stderr` should have an upper case name
   --> crates/frankenlibc-abi/src/stdio_abi.rs:174:12
    |
174 | pub static stderr: usize = STDERR_SENTINEL;
    |            ^^^^^^ help: convert the identifier to upper case: `STDERR`

warning: `frankenlibc-abi` (lib) generated 3 warnings
    Finished `test` profile [unoptimized + debuginfo] target(s) in 0.05s
     Running tests/pthread_thread_lifecycle_test.rs (/data/tmp/cargo-target-bd1f35/debug/deps/pthread_thread_lifecycle_test-fa35d04b963693f1)

thread 'pthread_detach_makes_subsequent_join_fail_with_esrch' (4064664) panicked at crates/frankenlibc-abi/tests/pthread_thread_lifecycle_test.rs:118:5:
assertion `left == right` failed
  left: 22
 right: 3
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: test failed, to rerun pass `-p frankenlibc-abi --test pthread_thread_lifecycle_test`
warning: static variable `stdin` should have an upper case name
   --> crates/frankenlibc-abi/src/stdio_abi.rs:166:12
    |
166 | pub static stdin: usize = STDIN_SENTINEL;
    |            ^^^^^ help: convert the identifier to upper case: `STDIN`
    |
    = note: `#[warn(non_upper_case_globals)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: static variable `stdout` should have an upper case name
   --> crates/frankenlibc-abi/src/stdio_abi.rs:170:12
    |
170 | pub static stdout: usize = STDOUT_SENTINEL;
    |            ^^^^^^ help: convert the identifier to upper case: `STDOUT`

warning: static variable `stderr` should have an upper case name
   --> crates/frankenlibc-abi/src/stdio_abi.rs:174:12
    |
174 | pub static stderr: usize = STDERR_SENTINEL;
    |            ^^^^^^ help: convert the identifier to upper case: `STDERR`

warning: `frankenlibc-abi` (lib) generated 3 warnings
    Finished `test` profile [unoptimized + debuginfo] target(s) in 0.05s
     Running tests/pthread_thread_lifecycle_test.rs (/data/tmp/cargo-target-bd1f35/debug/deps/pthread_thread_lifecycle_test-fa35d04b963693f1)

thread 'pthread_detach_makes_subsequent_join_fail_with_esrch' (4064830) panicked at crates/frankenlibc-abi/tests/pthread_thread_lifecycle_test.rs:118:5:
assertion `left == right` failed
  left: 22
 right: 3
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: test failed, to rerun pass `-p frankenlibc-abi --test pthread_thread_lifecycle_test`
